[package]
name = "skalo"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
hashbrown = "0.14.0"
serde = "1.0.183"
serde_json = "1.0.105"
ska = "0.3.2"
