[package]
name = "skalo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
hashbrown = { version = "0.14", features = ["rayon"] }
serde = "1.0.183"
serde_json = "1.0.105"
rayon = "1.5"
indicatif = "0.17.4"
ska = "0.3.11"
seq_io = "0.3.2"
flate2 = "1.0.25"
bit-set = "0.8.0"
dashmap = "6.1.0"
